--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL/
 
 MONGODB_URL=mongodb+srv://prajjwal:31wfT27EEP5yhRPR@cluster0.usbyy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+WEBHOOK_SECRET = whsec_zRNMeTu8eXmHDrmpZPLpWqRFmLh3W8PQ
